# project/resources/ts/openapi/models/QuestionnaireType.ts
@@ -1,0 +1,36 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI Tutorial
+ * OpenAPI Tutorial by halhorn
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ * ■アンケートの種類  
+ * FIRST_TEST: 初回テスト
+ * @export
+ * @enum {string}
+ */
+export enum QuestionnaireType {
+    FIRST_TEST = 1
+}
+
+export function QuestionnaireTypeFromJSON(json: any): QuestionnaireType {
+    return QuestionnaireTypeFromJSONTyped(json, false);
+}
+
+export function QuestionnaireTypeFromJSONTyped(json: any, ignoreDiscriminator: boolean): QuestionnaireType {
+    return json as QuestionnaireType;
+}
+
+export function QuestionnaireTypeToJSON(value?: QuestionnaireType | null): any {
+    return value as any;
+}
+
